--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,11 +1,11 @@
 @software{Stress2Grid,
-  title = {Matlab Script Stress2Grid},
+  title = {Matlab Script Stress2Grid v1.1},
   rights = {GPLv3},
   url = {https://github.com/MorZieg/Stress2Grid},
-  shorttitle = {Stress2Grid},
-  version = {2017.3.1},
-  urldate = {2017-03-01},
+  shorttitle = {Stress2Grid v1.1},
+  version = {2019.3.1},
+  urldate = {2019-03-01},
   keywords = {Scientific/Engineering,Scientific/Engineering - Information Analysis,Scientific/Engineering - Physics,Scientific/Engineering - Visualization,Software Development - Libraries - Application Frameworks},
   author = {Moritz O. Ziegler and Oliver Heidbach},
-  doi = {10.5880/wsm.2017.002}
+  doi = {10.5880/wsm.2019.002}
 }
